--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -7,6 +7,7 @@ option[disabled="disabled"] { color: #ccc; }
 blockquote { font-size: 100%; }
 a { text-decoration: none !important; }
 iframe { padding: 0px; margin: 0px; border: 0px; }
+sup { font-size: 130%; }
 .collapsed-footer { padding: 8px; }
 .panel { border-radius: 6px; }
 .btn { font-weight: bold; }
