--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -8,6 +8,7 @@ blockquote { font-size: 100%; }
 a { text-decoration: none !important; }
 iframe { padding: 0px; margin: 0px; border: 0px; }
 sup { font-size: 130%; }
+pre { white-space: pre-wrap; }
 .collapsed-footer { padding: 8px; }
 .panel { border-radius: 6px; }
 .btn { font-weight: bold; }
@@ -54,6 +55,8 @@ sup { font-size: 130%; }
   50% { color: yellow; }
   100% { color: white; }
 }
+.flashing { animation: pulse-flashing 1s linear infinite; }
+@keyframes pulse-flashing { 50% { opacity: 0.5; } }
 .language-code {
   display: inline-block;
   min-width: 22px;
