Adding larger CSS style

--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -5,6 +5,8 @@ thead td, tbody td, tfoot, .collapsed-footer { text-align: center; }
 td.tiny { width: 1px; white-space: nowrap; }
 option[disabled="disabled"] { color: #ccc; }
 blockquote { font-size: 100%; }
+.larger { font-size: 120% }
+input.larger { height: 38px }
 a { text-decoration: none !important; }
 iframe { padding: 0px; margin: 0px; border: 0px; }
 sup { font-size: 110%; }
