--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -37,6 +37,7 @@ pre { white-space: pre-wrap; }
 .striped { background-color: #f9f9f9; }
 .hover { background-color: #f5f5f5; }
 .highlight { background-color: #fcf8e3 !important; font-weight: bold !important; }
+.highlight-no-bold { background-color: #fcf8e3 !important; }
 .alert-header {
   position: absolute;
   top: 0px;
