--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -40,6 +40,12 @@ pre { white-space: pre-wrap; }
 .hover { background-color: #f5f5f5; }
 .highlight { background-color: #fcf8e3 !important; font-weight: bold !important; }
 .highlight-no-bold { background-color: #fcf8e3 !important; }
+.invert {
+  background: black;
+  color: white;
+  padding: 3px 3px 0px;
+  border-radius: 1em;
+}
 .alert-header {
   position: absolute;
   top: 0px;
