--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -37,8 +37,10 @@ pre { white-space: pre-wrap; }
 .vertical-spacer-wide { margin-top: 1.0em; margin-bottom: 1.0em; }
 .horizontal-spacer { margin-left: 0.5em; margin-right: 0.5em; }
 .horizontal-spacer-wide { margin-left: 1.0em; margin-right: 1.0em; }
-.striped { background-color: #f9f9f9; }
-.hover { background-color: #f5f5f5; }
+.striped-bg { background-color: #f9f9f9; }
+.hover-bg { background-color: #f5f5f5; }
+.striped-rows > div:nth-of-type(odd) { background-color: #f9f9f9; }
+.hover-rows > div:hover { background-color: #f5f5f5; }
 .highlight { background-color: #fcf8e3 !important; font-weight: bold !important; }
 .highlight-no-bold { background-color: #fcf8e3 !important; }
 .invert {
@@ -498,3 +500,9 @@ cn-slider div.bubble.limit, [cn-slider] div.bubble.limit { color: #777; }
 
 .color-red, label.color-red, input.color-red, textarea.color-red, label.color-red > i { color: red; border-color: red; }
 .max-width-full { max-width: 100% }
+
+.no-horizontal-padding { padding-left: 0; padding-right: 0; }
+.no-vertical-padding { padding-top: 0; padding-bottom: 0; }
+.float-left { float: left; }
+.float-right { float: right; }
+
