--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -37,10 +37,12 @@ pre { white-space: pre-wrap; }
 .vertical-spacer-wide { margin-top: 1.0em; margin-bottom: 1.0em; }
 .horizontal-spacer { margin-left: 0.5em; margin-right: 0.5em; }
 .horizontal-spacer-wide { margin-left: 1.0em; margin-right: 1.0em; }
-.striped-bg { background-color: #f9f9f9; }
-.hover-bg { background-color: #f5f5f5; }
-.striped-rows > div:nth-of-type(odd) { background-color: #f9f9f9; }
-.hover-rows > div:hover { background-color: #f5f5f5; }
+.striped-bg { background-color: #e9e9e9; }
+.hover-bg { background-color: #d0d0d0; }
+.striped-rows > div:nth-of-type(odd) { background-color: #e9e9e9; }
+.hover-rows > div:hover { background-color: #d0d0d0; }
+.table-striped > tbody > tr:nth-of-type(odd) { background-color: #e9e9e9; }
+.table-hover > tbody > tr:hover { background-color: #d0d0d0; }
 .highlight { background-color: #fcf8e3 !important; font-weight: bold !important; }
 .highlight-no-bold { background-color: #fcf8e3 !important; }
 .caution { background-color: #ffc299 !important; font-weight: bold !important; }
