Feature: Moving webphone functions to menu bar

--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -507,3 +507,5 @@ cn-slider div.bubble.limit, [cn-slider] div.bubble.limit { color: #777; }
 .float-left { float: left; }
 .float-right { float: right; }
 
+.webphone-off { color: darkred; }
+.webphone-on { color: lightgreen; }
